Fix jumping when hovering or searching.

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -35,6 +35,10 @@
 		overflow-y: visible;
 		width: 86vw; // This is limited by a max-width.
 		height: 92vh; // This is limited by a max-height from the popover component itself.
+
+		// We take up the whole space horizontally, so as to afford a preview panel appearing.
+		// The layer is only for layout, and should not block clicks through it.
+		pointer-events: none;
 	}
 
 	// Remove the popover styling and apply it instead to each sub panel.
@@ -65,7 +69,8 @@
 .block-editor-inserter__main-area,
 .block-editor-inserter__preview-panel {
 	background: $white;
-	width: 100%;
+	width: 49%;
+	width: calc(50% - #{$grid-size-large});
 
 	@include break-medium() {
 		box-shadow: $shadow-popover;
@@ -79,11 +84,13 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-
 	margin-right: $grid-size-large;
 
 	@include break-medium {
 		position: relative;
+
+		// Re-enable clicks on this layer.
+		pointer-events: all;
 	}
 }
 
@@ -101,6 +108,7 @@
 
 .components-popover input[type="search"].block-editor-inserter__search {
 	display: block;
+	flex-shrink: 0;
 	margin: $grid-size-large;
 	padding: 11px $grid-size-large;
 	position: relative;
